# LSM-Delta-Hedge

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
notebooks/: 01_backtest.ipynb
python/: run_experiment.py
python/bench/: bench_pricer.py  convergence.py  stateful_vs_stateless.py
python/lsmhedge/: __init__.py  bs.py  data.py  hedge.py  lsm_cpp.pyi  metrics.py  model_cache.py  validators.py
python/studies/: multi_start_study.py
src/cpp/bindings/: pybind_module.cpp
src/cpp/lsm/: lsm_model.cpp  lsm_model.h  lsm_model_object.cpp  lsm_model_object.h
tests/cpp/: test_smoke.cpp
tests/python/: test_hedge.py  test_hedge_smoke.py  test_pricer_vs_bs.py  test_stateful_model.py
